[workspace]
resolver = "2"
members = [
    "packages/example-app/src-tauri",
    "packages/tauri-plugin-sharing",
    "packages/tauri-plugin-context-menu",
    "packages/tauri-plugin-map-display",
    "packages/tauri-plugin-haptic-feedback",
    "packages/tauri-plugin-geolocation",
    "packages/tauri-plugin-iap",
    "packages/tauri-plugin-auth",
    "packages/tauri-plugin-notifications"
]